--- a/presentation/src/main/res/layout/layout_search_bottom_expand.xml
+++ b/presentation/src/main/res/layout/layout_search_bottom_expand.xml
@@ -93,12 +93,15 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
+            android:id="@+id/article_recycler"
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@+id/head_constraint"
+            app:spanCount="2"
+            tools:listitem="@layout/item_article_thumbnail"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@+id/head_constraint" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
