--- a/presentation/src/main/res/layout/item_article_thumbnail.xml
+++ b/presentation/src/main/res/layout/item_article_thumbnail.xml
@@ -9,59 +9,71 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_margin="7dp"
-        android:layout_width="167dp"
-        android:layout_height="238dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <kr.foorun.uni_eat.base.view.base.BaseImageView
-            app:glide="@{article.shopImages.get(0)}"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-        
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="238dp"
+            app:cardCornerRadius="4dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <kr.foorun.uni_eat.base.view.base.BaseTextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{article.shopName}"
-                android:textStyle="bold"
-                android:textSize="19sp"
-                android:textColor="@color/white"
-                android:layout_marginBottom="10dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <kr.foorun.uni_eat.base.view.base.BaseImageView
-                android:id="@+id/line"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/long_gray_line"
-                android:layout_marginTop="10dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/name"/>
-
-            <kr.foorun.uni_eat.base.view.base.BaseTextView
+                android:id="@+id/thumbnail_image"
+                app:glide="@{article.shopImages.get(0)}"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{article.tags}"
-                android:layout_marginTop="10dp"
-                android:textSize="13sp"
-                android:singleLine="true"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/line"/>
+                android:layout_height="match_parent"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="12dp">
+
+                <kr.foorun.uni_eat.base.view.base.BaseTextView
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{article.shopName}"
+                    android:textStyle="bold"
+                    android:textSize="19sp"
+                    android:textColor="@color/white"
+                    android:layout_marginBottom="10dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/line" />
+
+                <kr.foorun.uni_eat.base.view.base.BaseImageView
+                    android:id="@+id/line"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/long_gray_line"
+                    android:scaleType="fitXY"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/name"/>
+
+                <kr.foorun.uni_eat.base.view.base.BaseTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{article.tags}"
+                    android:layout_marginTop="10dp"
+                    android:textSize="13sp"
+                    android:singleLine="true"
+                    android:textColor="@color/white"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/line"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
