--- a/presentation/src/main/res/layout/item_recent_wrods.xml
+++ b/presentation/src/main/res/layout/item_recent_wrods.xml
@@ -20,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{word}"
+            android:onClick="@{() -> viewModel.clicked(word)}"
             android:gravity="center_vertical"
             android:textSize="15sp"
             android:textColor="@color/smallTextColor"
