--- a/presentation/src/main/res/navigation/main_nav.xml
+++ b/presentation/src/main/res/navigation/main_nav.xml
@@ -39,4 +39,8 @@
         android:id="@+id/shopDetailFragment"
         android:name="kr.foorun.uni_eat.feature.map.shop_detail.fragment.ShopDetailFragment"
         android:label="ShopDetailFragment" />
+    <fragment
+        android:id="@+id/myPageFragment"
+        android:name="kr.foorun.uni_eat.feature.mypage.MyPageFragment"
+        android:label="MyPageFragment"/>
 </navigation>
