--- a/presentation/src/main/res/menu/menu_main.xml
+++ b/presentation/src/main/res/menu/menu_main.xml
@@ -1,10 +1,25 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="kr.foorun.uni_eat.feature.main.MainActivity">
+<?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<!--    item id must be same as navigation id-->
+
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/map_nav"
+        android:icon="@drawable/bottom_image_bookmark"
+        android:title="@string/map" />
+    <item
+        android:id="@+id/home_nav"
+        android:icon="@drawable/bottom_image_home"
+        android:title="@string/home" />
+    <item
+        android:id="@+id/article_nav"
+        android:icon="@drawable/bottom_image_article"
+        android:title="@string/article" />
+    <item
+        android:id="@+id/event_nav"
+        android:icon="@drawable/bottom_image_event"
+        android:title="@string/event" />
+    <item
+        android:id="@+id/my_nav"
+        android:icon="@drawable/bottom_image_person"
+        android:title="@string/my" />
 </menu>
