--- a/presentation/src/main/res/layout/fragment_my_page.xml
+++ b/presentation/src/main/res/layout/fragment_my_page.xml
@@ -9,16 +9,97 @@
             type="kr.foorun.uni_eat.feature.mypage.MyPageViewModel" />
     </data>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:background="@color/invisible"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <include layout="@layout/toolbar_my_page"/>
+        <kr.foorun.uni_eat.base.view.base.BaseTextView
+            android:id="@+id/toolbar_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:textStyle="bold"
+            android:layout_marginStart="21dp"
+            android:layout_marginTop="35dp"
+            android:text="@string/my_page"
+            android:textSize="23sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
+        <kr.foorun.uni_eat.base.view.base.BaseImageView
+            android:id="@+id/my_page_more_button"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:background="?android:selectableItemBackground"
+            android:layout_marginEnd="18dp"
+            android:src="@drawable/my_page_dot"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/toolbar_title" />
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <FrameLayout
+            android:id="@+id/frameLayout"
+            android:layout_width="93dp"
+            android:layout_height="93dp"
+            android:layout_marginStart="21dp"
+            android:layout_marginTop="23dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_title">
+
+            <kr.foorun.uni_eat.base.view.base.BaseImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/my_page_base_profile" />
+
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_image"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                tools:src="@drawable/test_img" />
+
+            <kr.foorun.uni_eat.base.view.base.BaseImageView
+                android:id="@+id/empty_profile_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/my_page_base_empty_profile"
+                android:visibility="visible" />
+        </FrameLayout>
+
+        <kr.foorun.uni_eat.base.view.base.BaseTextView
+            android:id="@+id/name_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/my_profile"
+            android:layout_marginStart="13dp"
+            android:textSize="23sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/frameLayout"
+            app:layout_constraintTop_toTopOf="@+id/frameLayout" />
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/school_certification_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="5dp"
+            app:layout_constraintStart_toEndOf="@+id/frameLayout"
+            app:layout_constraintTop_toBottomOf="@+id/name_text">
+
+            <kr.foorun.uni_eat.base.view.base.BaseTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="13dp"
+                android:text="@string/school_certification"
+                android:textSize="15sp" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
