--- a/presentation/src/main/res/layout/layout_shop_bottom_collapse.xml
+++ b/presentation/src/main/res/layout/layout_shop_bottom_collapse.xml
@@ -67,7 +67,7 @@
                     android:layout_height="wrap_content"
                     android:text="정건"
                     android:textSize="15sp"
-                    android:textColor="@color/smallTextColor"
+                    android:textColor="@color/small_text"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/vertical_line_view"
@@ -91,7 +91,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
                     android:text="레스토랑"
-                    android:textColor="@color/smallTextColor"
+                    android:textColor="@color/small_text"
                     app:layout_constraintStart_toEndOf="@id/vertical_line_view"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
