--- a/presentation/src/main/res/layout/fragment_search_bottom_sheet.xml
+++ b/presentation/src/main/res/layout/fragment_search_bottom_sheet.xml
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginStart="21dp"
-                android:layout_marginTop="64dp"
+                android:layout_marginTop="@dimen/top_margin_64"
                 android:layout_marginEnd="13.38dp"
                 android:layout_marginBottom="16dp"
                 android:onClick="@{() -> viewModel.backClicked()}"
@@ -42,7 +42,7 @@
             <kr.foorun.uni_eat.base.view.base.BaseTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="64dp"
+                android:layout_marginTop="@dimen/top_margin_64"
                 android:layout_marginBottom="16dp"
                 android:layout_marginStart="13.38dp"
                 android:singleLine="true"
@@ -57,7 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_marginTop="64dp"
+                android:layout_marginTop="@dimen/top_margin_64"
                 android:layout_marginBottom="16dp"
                 android:layout_marginEnd="24dp"
                 android:onClick="@{() -> viewModel.backClicked()}"
@@ -94,7 +94,7 @@
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
-                        <ImageView
+                        <kr.foorun.uni_eat.base.view.base.BaseImageView
                             android:id="@+id/back_button"
                             android:onClick="@{() -> viewModel.backClicked()}"
                             android:layout_width="32dp"
