--- a/presentation/src/main/res/layout/item_recent_wrods.xml
+++ b/presentation/src/main/res/layout/item_recent_wrods.xml
@@ -23,7 +23,7 @@
             android:onClick="@{() -> viewModel.clicked(word)}"
             android:gravity="center_vertical"
             android:textSize="15sp"
-            android:textColor="@color/smallTextColor"
+            android:textColor="@color/small_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
