--- a/presentation/src/main/res/layout/layout_search_bottom_collapse.xml
+++ b/presentation/src/main/res/layout/layout_search_bottom_collapse.xml
@@ -39,10 +39,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_marginStart="@dimen/margin_21"
                 android:layout_marginEnd="186dp"
                 android:layout_marginTop="49dp"
                 android:layout_marginBottom="29dp"
-                app:layout_constraintEnd_toStartOf="@+id/order_linear"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
@@ -71,7 +71,6 @@
                 android:layout_marginTop="54dp"
                 android:layout_marginEnd="20.94dp"
                 android:layout_marginBottom="33dp"
-                app:layout_constraintStart_toEndOf="@+id/search_linear"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent">
