--- a/presentation/src/main/res/layout/item_more_article.xml
+++ b/presentation/src/main/res/layout/item_more_article.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+        <variable
+            name="viewModel"
+            type="kr.foorun.uni_eat.feature.article.adapter.ArticleAdapterViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,6 +16,7 @@
         <kr.foorun.uni_eat.base.view.base.BaseImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="@{() -> viewModel.moreClick()}"
             android:src="@drawable/more_article"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
