--- a/presentation/src/main/res/layout/base_constraint.xml
+++ b/presentation/src/main/res/layout/base_constraint.xml
@@ -12,20 +12,18 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/root"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <ImageView
+        <kr.foorun.uni_eat.base.view.base.BaseImageView
             android:id="@+id/back_button"
             android:layout_width="18dp"
             android:layout_height="24dp"
             android:layout_marginTop="73dp"
-            android:layout_marginBottom="755.4dp"
             android:layout_marginStart="17dp"
             android:layout_marginEnd="347dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
