--- a/presentation/src/main/res/layout/fragment_shop_detail.xml
+++ b/presentation/src/main/res/layout/fragment_shop_detail.xml
@@ -21,7 +21,7 @@
             android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/bottom_constraint"
+            app:layout_constraintBottom_toTopOf="@id/bottom_option"
             app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
@@ -54,97 +54,17 @@
                         app:layout_constraintBottom_toBottomOf="@id/detail_recycler" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <kr.foorun.uni_eat.base.view.base.BaseTextView
-                        android:id="@+id/shop_name_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:maxLines="1"
-                        android:text="카인드"
-                        android:textStyle="bold"
-                        android:textSize="25sp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginStart="19.5dp"
-                        android:layout_marginBottom="8dp"
-                        app:layout_constraintBottom_toTopOf="@id/shop_info_constraint"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"/>
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/shop_info_constraint"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="9dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginStart="21.5dp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/shop_name_text">
-
-                        <kr.foorun.uni_eat.base.view.base.BaseTextView
-                            android:id="@+id/shop_nick_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="정건"
-                            android:textSize="15sp"
-                            android:textColor="@color/small_text"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toStartOf="@id/vertical_line_view"
-                            app:layout_constraintStart_toStartOf="parent"/>
-
-                        <View
-                            android:id="@+id/vertical_line_view"
-                            android:layout_width="1dp"
-                            android:layout_height="18dp"
-                            android:background="@drawable/vertical_line"
-                            android:layout_marginStart="7.5dp"
-                            android:layout_marginEnd="7.5dp"
-                            app:layout_constraintStart_toEndOf="@id/shop_nick_text"
-                            app:layout_constraintEnd_toStartOf="@id/shop_kind_text"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent" />
-
-                        <kr.foorun.uni_eat.base.view.base.BaseTextView
-                            android:id="@+id/shop_kind_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="15sp"
-                            android:text="레스토랑"
-                            android:textColor="@color/small_text"
-                            app:layout_constraintStart_toEndOf="@id/vertical_line_view"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent"/>
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    <View
-                        android:id="@+id/horizon_line_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="0.7dp"
-                        android:background="@drawable/horizen_line"
-                        android:layout_marginTop="9dp"
-                        android:layout_marginStart="17dp"
-                        android:layout_marginEnd="32dp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintBottom_toTopOf="@id/shop_explain_text"
-                        app:layout_constraintTop_toBottomOf="@id/shop_info_constraint"/>
-
-                    <kr.foorun.uni_eat.base.view.base.BaseTextView
-                        android:id="@+id/shop_explain_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="15sp"
-                        android:text="분위기 좋은 파스타 맛집"
-                        android:layout_marginStart="20.5dp"
-                        android:layout_marginTop="14dp"
-                        android:layout_marginBottom="11dp"
-                        app:layout_constraintTop_toBottomOf="@id/horizon_line_view"
-                        app:layout_constraintStart_toStartOf="parent" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                <kr.foorun.uni_eat.base.view.base.BaseShopConstraintView
+                    android:id="@+id/shopInformation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:shopName="카인드"
+                    app:shopNick="정건"
+                    app:shopKind="레스토랑"
+                    app:shopContent="분위기 좋은 어쩌구저쩌구"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
                 <kr.foorun.uni_eat.base.view.base.BaseInformation
                     android:layout_marginTop="29dp"
@@ -251,39 +171,17 @@
             android:layout_height="wrap_content"
             android:onClick="@{() -> viewModel.backClicked()}"
             android:src="@drawable/arrow_left_white"
-            android:layout_marginTop="73dp"
-            android:layout_marginStart="21dp"
+            android:layout_marginTop="@dimen/back_button_margin_top_73"
+            android:layout_marginStart="@dimen/back_button_margin_start_21"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
-        
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/bottom_constraint"
-            android:layout_width="0dp"
-            android:layout_height="84dp"
+
+        <kr.foorun.uni_eat.base.view.base.BaseBottomOptionView
+            android:id="@+id/bottom_option"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <kr.foorun.uni_eat.base.view.base.BaseImageView
-                android:id="@+id/bookmark_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/bookmark"
-                android:layout_marginTop="16.18dp"
-                android:layout_marginEnd="27dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
-
-            <kr.foorun.uni_eat.base.view.base.BaseImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/share"
-                android:layout_marginTop="13.99dp"
-                android:layout_marginEnd="31dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/bookmark_image"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
+            app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
