--- a/presentation/src/main/res/layout/layout_search_bottom_expand.xml
+++ b/presentation/src/main/res/layout/layout_search_bottom_expand.xml
@@ -21,7 +21,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
+            <kr.foorun.uni_eat.base.view.base.BaseImageView
                 android:id="@+id/arrow_up_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
