--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -8,14 +8,25 @@
     <dimen name="margin_30">30dp</dimen>
     <dimen name="margin_199">199dp</dimen>
     <dimen name="margin_49">49dp</dimen>
+    <dimen name="margin_11">11dp</dimen>
     <dimen name="top_margin_64">64dp</dimen>
+
+    <dimen name="back_button_margin_top_73">73dp</dimen>
+    <dimen name="back_button_margin_start_21">21dp</dimen>
+
     <dimen name="article_large_height471">471dp</dimen>
     <dimen name="article_large_width322">322dp</dimen>
-    <dimen name="margin_11">11dp</dimen>
     <dimen name="article_text_large_32">32sp</dimen>
     <dimen name="article_text_small_19">19sp</dimen>
     <dimen name="article_tag_small_13">13sp</dimen>
     <dimen name="article_tag_large_15">15sp</dimen>
     <dimen name="article_padding_26">26dp</dimen>
+    <dimen name="article_detail_icon_start_21">21dp</dimen>
+    <dimen name="article_detail_icon_top_25">25dp</dimen>
+
+    <dimen name="icon_size_mini_52">52dp</dimen>
+
+    <dimen name="text_size_large_23">23sp</dimen>
+    <dimen name="bottom_option_height_84">84dp</dimen>
 
 </resources>
